html e js divididos e funciona a codificação

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
             Informe a mensagem: <br> <input id="message" class="text_box" type="text" /> </p>
 
         <p> Informe a chave: <input id="key_ciphering" class="key_box" type="number" />
-            <button class="button" id="encode" onclick="cipherEncode()"> Cifrar</button> </p>
+            <button class="button" id="encode_button" onclick="click"> Cifrar</button> </p>
 
         <p>Esta é sua mensagem cifrada:</p>
         <p id="encripted_message"> </p>
