tudo funciona, início dos testes

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
             Informe a mensagem: <br> <input id="message" class="text_box" type="text" /> </p>
 
         <p> Informe a chave: <input id="key_ciphering" class="key_box" type="number" />
-            <button class="button" id="encode_button" onclick="click"> Cifrar</button> </p>
+            <button class="button" id="encode_button"> Cifrar</button> </p>
 
         <p>Esta é sua mensagem cifrada:</p>
         <p id="encripted_message"> </p>
@@ -28,7 +28,7 @@
         <p> Informe a mensagem cifrada: <br> <input id="cipher_message" class="text_box" type="text" /> </p>
 
         <p> Informe a chave: <input id="key_deciphering" class="key_box" type="number" />
-            <button class="button" id="decode" onclick="cipherDecode()"> Decifrar</button> </p>
+            <button class="button" id="decode_button"> Decifrar</button> </p>
 
         <p>Esta é sua mensagem cifrada:</p>
         <p id="decipher_message"></p>
@@ -37,10 +37,10 @@
 
 
 
-    <div id="root"></div>
+    <div id="root "></div>
 
-    <script src="cipher.js"></script>
-    <script src="tests.js"></script>
+    <script src="cipher.js "></script>
+
 </body>
 
 </html>
