css quase pronto

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
     <div id="result_cipher" class="box">
 
         <p> Esta é sua mensagem cifrada:</p>
-        <p id="encripted_message"> </p>
+        <p id="cipher_message"> </p>
 
     </div>
 
@@ -36,7 +36,7 @@
 
     <div id="result_deciphering" class="box">
 
-        <p>Esta é sua mensagem cifrada:</p>
+        <p>Esta é sua mensagem decifrada:</p>
         <p id="decipher_message"></p>
 
     </div>
