--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
 		<meta charset="utf-8">
 		<title>Caesar Cipher</title>
 		<link rel="stylesheet" href="style.css" />
+		<link rel="shortcut icon" href="/src/images/favicon.ico"/>
 </head>
 
 <body>
@@ -57,10 +58,10 @@
 
 		</div>
 
-		<script src="cipher.js "></script>
+
 
 	</div>
-		<script src="testes.js"></script>
+ 
 
 <footer>
 		<div id="root "></div>
@@ -68,6 +69,7 @@
 
 </footer>
 <script src="cipher.js "></script>
+<script src="tests.js"></script>
 </body>
 
 
