preparando a publicação github pages

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Caesar Cipher</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="./src/style.css" />
   <link rel="shortcut icon" href="/src/images/favicon.ico" />
 </head>
 
@@ -46,7 +46,7 @@
   <footer>
     <div id="root "></div>
   </footer>
-  <script src="cipher.js "></script>
-  <script src="tests.js"></script>
+  <script src="./src/cipher.js "></script>
+  <script src="./test/cipher.spec.js"></script>
 </body>
 </html>
